--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 14 2020 18:20:54 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Sep 14 2020 18:25:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5ecd31c69fc0551b07c4cd" data-wf-site="5f5ecd31c69fc02c2907c4cc">
 <head>
   <meta charset="utf-8">
@@ -56,43 +56,43 @@
         <a id="w-node-66ad46a0d19c-1b07c4cd" href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6badbb065871a6_cursor.svg" alt=""></div>
           <div class="service-title">Intro to Unity Pt. 1</div>
-          <h1 class="heading-4">October 5, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 5, 2020 4PM PST</h1>
           <p class="service-paragraph">An introduction to what Unity is, and a tutorial on making a simple game using basic Unity functions.</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad420d5871c1_eye.svg" alt=""></div>
           <div class="service-title">Intro to Unity Pt. 2</div>
-          <h1 class="heading-4">October 7, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 7, 2020 4PM PST</h1>
           <p class="service-paragraph">A demonstration of some more complex techniques, such as dynamic player controls and cameras.</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad84635871a0_flash.svg" alt=""></div>
           <div class="service-title">Intro to Gamemaker Pt. 1</div>
-          <h1 class="heading-4">October 6, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 6, 2020 4PM PST</h1>
           <p class="service-paragraph">An introduction to GameMaker, and how you can use it to make a 2D game.</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad3b925871a7_copy.svg" alt=""></div>
           <div class="service-title">Intro to Unity Pt. 3</div>
-          <h1 class="heading-4">October 8, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 8, 2020 4PM PST</h1>
           <p class="service-paragraph">A final workshop dealing with advanced techniques, such as enemy behavior, 3D environments, and sound design.</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad12cd5871be_wifi.svg" alt=""></div>
           <div class="service-title">Game Design with Benjamin Rivers</div>
-          <h1 class="heading-4">October 9, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 9, 2020 4PM PST</h1>
           <p class="service-paragraph">Published Indie Game Developer Benjamin Rivers gives some tips and tricks on designing and implementing a new game.</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad47e25871b7_book.svg" alt=""></div>
           <div class="service-title">Intro to Gamemaker Pt. 2</div>
-          <h1 class="heading-4">October 10, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 10, 2020 4PM PST</h1>
           <p class="service-paragraph">A continuation of the lessons learned in Part 1, and an introduction to some more advanced techniques.</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad50185871c6_folder.svg" alt=""></div>
           <div class="service-title">Intro to Gamemaker Pt. 3</div>
-          <h1 class="heading-4">October 11, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 11, 2020 4PM PST</h1>
           <p class="service-paragraph">A final culmination of the things learned in the prior two workshops, dealing with advanced techniques and solutions.</p>
         </a>
         <div class="services-grid-block-04 end-block">
@@ -112,25 +112,25 @@
         <a id="w-node-17ccc8cb6738-1b07c4cd" href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6badbb065871a6_cursor.svg" alt=""></div>
           <div class="service-title">Development Begins!</div>
-          <h1 class="heading-4">October 12, 2020 </h1>
+          <h1 class="service-title time">October 12, 2020 </h1>
           <p class="service-paragraph">Today&#x27;s the day! October 12th marks the beginning of the Game Jam, when you&#x27;ll start work on your game.</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad420d5871c1_eye.svg" alt=""></div>
           <div class="service-title">Stand-Up #1: Ideas</div>
-          <h1 class="heading-4">October 13, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 13, 2020 4PM PST</h1>
           <p class="service-paragraph">Meet up in the early stages of development to share game ideas you&#x27;ve been brainstorming. Find some inspiration, or help others do the same!</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad3b925871a7_copy.svg" alt=""></div>
           <div class="service-title">Stand-Up #2: Progress Report</div>
-          <h1 class="heading-4">October 15, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 15, 2020 4PM PST</h1>
           <p class="service-paragraph">Meet up and share the successes and problems you&#x27;ve encountered while trying to implement your game ideas - help each other troubleshoot!</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad84635871a0_flash.svg" alt=""></div>
           <div class="service-title">Stand-Up #3: Final Check</div>
-          <h1 class="heading-4">October 17, 2020 4PM PST</h1>
+          <h1 class="service-title time">October 17, 2020 4PM PST</h1>
           <p class="service-paragraph">As the deadline approaches, meet up one last time to talk about how your game has turned out, and any final issues you still need to hammer out.</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
@@ -141,13 +141,13 @@
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad50185871c6_folder.svg" alt=""></div>
           <div class="service-title">Live Bit Project Q&amp;A</div>
-          <h1 class="heading-4">October 18, 2020 1PM PST</h1>
+          <h1 class="service-title time">October 18, 2020 1PM PST</h1>
           <p class="service-paragraph">Learn about who we are, and how you can get involved to help us make education free and accessible.</p>
         </a>
         <a href="#" class="services-grid-block-04 w-inline-block">
           <div class="icon-block"><img src="https://uploads-ssl.webflow.com/5f5ea9414d3eae3021c5f36f/5f5ea9414a6bad12cd5871be_wifi.svg" alt=""></div>
           <div class="service-title">Submissions Due!</div>
-          <h1 class="heading-4">October 18, 2020 6PM PST</h1>
+          <h1 class="service-title time">October 18, 2020 6PM PST</h1>
           <p class="service-paragraph">October 18th at 6:00 PST is the deadline for your game - we&#x27;ll show how to submit your game once the deadline approaches.</p>
         </a>
         <div class="services-grid-block-04 end-block">
